# ConvergioPlatform

./: .gitignore  AGENT.md  AGENTS.md  AgenticManifesto.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  LEGAL_NOTICE.md  README.md  SECURITY.md  TROUBLESHOOTING.md  dashboard_web  setup.sh  tsconfig.json  vitest.config.ts
daemon/: Cargo.toml  start.sh
daemon/benches/: mesh.rs
daemon/src/: background.rs  background_tests.rs  cli_agent.rs  cli_agent_tests.rs  cli_audit.rs  cli_audit_project.rs  cli_audit_tests.rs  cli_bus.rs  cli_checkpoint.rs  cli_commands.rs  cli_http.rs  cli_kb.rs  cli_lock.rs  cli_ops.rs  cli_ops_tests.rs  cli_plan.rs  cli_plan_handlers.rs  cli_plan_tests.rs  cli_project.rs  cli_review.rs  cli_run.rs  cli_skill.rs  cli_skill_enable.rs  cli_skill_tests.rs  cli_skill_transpile.rs  cli_skill_validate.rs  cli_support.rs  cli_support_tests.rs  cli_task.rs  cli_task_approve.rs  cli_task_tests.rs  cli_wave.rs  ipc_handler.rs  lib.rs  main.rs  platform_paths.rs  transpiler.rs
daemon/src/cli/: commands_auth.rs  commands_coordinator.rs  commands_env.rs  helpers.rs  main.rs  types.rs
daemon/src/db/: cli.rs  crdt.rs  migrations.rs  mod.rs  models.rs  seed_agents.rs  service.rs  tests.rs  tests_crud.rs
daemon/src/digest/: mod.rs
daemon/src/hooks/: checks.rs  checks_helpers.rs  checks_support.rs  checks_support_helpers.rs  mod.rs
daemon/src/ipc/: auth_sync.rs  budget.rs  cli.rs  client.rs  conflicts.rs  engine.rs  locks.rs  mod.rs  models.rs  protocol.rs  router.rs  schema.rs  skills.rs  socket.rs  worktrees.rs
daemon/src/ipc_handler/: auth.rs  mod.rs  models_handler.rs  routing.rs  server.rs  types.rs  utils.rs
daemon/src/lock/: mod.rs
daemon/src/mesh/: auth.rs  compat.rs  coordinator.rs  daemon.rs  daemon_sync.rs  handoff.rs  (+32 more)
daemon/tests/: api_plan_db_integration.rs  chat_delegate_integration.rs  cli_plan_test.rs  cli_task_wave_test.rs  daemon_consolidation_e2e.rs  e2e.rs  ipc_integration.rs  ported_get_routes.rs  ported_non_get_routes.rs  ported_route_contracts.rs  tui_integration.rs  validation_tests.rs  ws_sse_integration.rs
(+820 files in other folders)
