[package]
name = "convergio-platform-daemon"
version = "12.0.0"
edition = "2021"

[lib]
name = "claude_core"
path = "src/lib.rs"

[[bin]]
name = "convergio-platform-daemon"
path = "src/main.rs"

[[bench]]
name = "mesh"
harness = false

[features]
default = ["crsqlite"]
crsqlite = []

[dependencies]
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
qrcode = "0.14"
image = "0.25"
toml = "0.8"
anyhow = "1"
aes-gcm = { version = "0.10", features = ["std"] }
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled", "functions", "load_extension"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
tokio = { version = "1.44", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "timeout", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
socket2 = "0.5"
libc = "0.2"
hostname = "0.4"
sysinfo = "0.33"
ratatui = "0.30"
base64 = "0.22.1"
serde_bytes = "0.11.19"
hmac = "0.12.1"
sha2 = "0.10.9"
rand = "0.10.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_yaml = "0.9"
chacha20poly1305 = "0.10"
hkdf = "0.12"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"

[dev-dependencies]
tower = "0.5"
tempfile = "3.10"
http-body-util = "0.1"
tokio-tungstenite = "0.26"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
